# bytes

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: bytearray.rs  bytebuf.rs  bytes.rs  cowbytes.rs  de.rs  heapless_bytebuf.rs  lib.rs  ser.rs  value.rs
tests/: test.rs  test_derive.rs  test_partialeq.rs  test_serde.rs
