[package]
name = "serde_bytes"
version = "0.11.6" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Optimized handling of `&[u8]` and `Vec<u8>` for Serde"
repository = "https://github.com/serde-rs/bytes"
documentation = "https://docs.serde.rs/serde_bytes/"
keywords = ["serde", "serialization", "no_std"]
categories = ["encoding"]
readme = "README.md"
edition = "2018"
rust-version = "1.31"

[features]
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc"]

[dependencies]
serde = { version = "1.0", default-features = false }

[dev-dependencies]
bincode = "1.0"
serde_derive = "1.0"
serde_test = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
